--- a/backend/assets/css/style.css
+++ b/backend/assets/css/style.css
@@ -1,17 +1,32 @@
-
-body {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/*main*/
-.logo-brand{
-  height: 60px;
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 }
 
 .header {
-  box-shadow: 0 1px 20px rgba(0,0,0,0.2);
+  height: 80px;
 }
+
+.header .brand {
+  background: #fff;
+}
+.brand img {
+  width: 60px;
+}
+
+.header-content {
+  background: #262D47;
+}
+
 .btn-show {
   padding: 5px;
   height: 60px;
@@ -60,39 +75,41 @@ body {
 }
 
 .float-end {
-  float:right;
-  margin-right: 10px;
-  color: #fff;
-}
-
-.right-header {
-  background: #353C48
-}
-.name {
-  height: 60px;
-}
-
-.online {
-  position: relative;
-}
-
-.online::before {
-  content: '';
-  width: 8px;
-  height: 8px;
-  position: absolute;
-  top: 6px;
-  right: 45px;
-  background: #00a157;
-  border-radius: 50%;
-  box-shadow: 0 0 5px #00a157;
+  float: right;
 }
 
 .avatars {
+  margin-top: 5px;
+}
+
+.avatars .avatar img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.name {
+  margin-top: 10px;
+  color: #fff;
+}
+
+.online span{
   position: relative;
 }
-.avatar img{
+
+.online span:before {
+  content: '';
+  position: absolute;
+  top: 6px;
+  left: -15px;
+  width: 8px;
+  height: 8px;
+  background: #00a157;
+  box-shadow: 0 0 10px #00a157;
   border-radius: 50%;
+}
+
+.has-btn-user {
+  position: relative;
   cursor: pointer;
 }
 
@@ -102,36 +119,217 @@ body {
 
 .btn-user {
   position: absolute;
-  padding: 10px 15px;
+  top: 60px;
+  left: -100px;
+  width: 170px;
+  background: #fff;
+  z-index: 10;
   border-radius: 5px;
-  top: 75px;
-  right: 15px;
-  box-shadow: 0 0 10px #e4b9b9;
-  background: #F9FAFD;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: none;
 }
 
-.btn-user .btn {
-  margin: 5px 0;
-}
-
 .btn-user:before {
-  width: 0;
-  height: 0;
   position: absolute;
   content: '';
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 10px solid #fff;
   top: -10px;
-  right: 20px;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid #F9FAFD;
+  left: 133px;
 }
 
 .btn-user:after {
   position: absolute;
   content: '';
-  top: -15px;
-  left: 50px;
-  width: 100px;
-  height: 15px;
+  width: 120px;
+  height: 20px;
+  top: -10px;
+  left: 47px;
+  /* background: #f00; */
 }
+
+.btn-user .btn-infor {
+  margin-bottom: 10px;
+}
+
+.content-page {
+  margin-top: 60px;
+}
+
+.side-bar {
+  position: fixed;
+  top: 60px;
+  left: 0;
+  background: #A5B5D5;
+  width: 16%;
+  height: 100%;
+}
+
+.user-info {
+  margin: 20px 0;
+}
+
+.user-info .avatar img {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.user-info .admin {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+/*.menu-bar ul {*/
+/*  background: #A5B5D5;*/
+/*}*/
+
+.menu-bar ul li{
+  font-size: 16px;
+  background: #A5B5D5;
+  padding: 15px;
+}
+
+.menu-bar ul li:hover{
+  cursor: pointer;
+}
+
+.menu-bar ul li:hover a {
+  color: #FA626B;
+  margin-left: 5px;
+  transition: .2s;
+}
+
+.menu-bar ul li a, .menu-bar ul li span:first-child{
+  color: #000;
+  margin-right: 5px;
+  transition: .5s;
+}
+
+.main-content {
+  background: #F3F4F9;
+  box-shadow: inset 0 0 20px rgba(0,0,0,0.3);
+  min-height: calc(100vh - 60px);
+  padding-bottom: 50px;
+}
+
+.notifications-menu div[class*='alert'] {
+  border-radius: 3px;
+  margin-right: 10px;
+  margin-top: 10px;
+  height: 30px;
+  padding: 5px;
+}
+
+/*products/index*/
+
+.product {
+  box-shadow: 0 0 10px rgba(0,0,0,.2);
+  background: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.product-image {
+  width: 200px;
+  height: 120px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 17px;
+}
+
+.product-image img {
+  width: 120px;
+  transition: .5s;
+}
+
+.product-name {
+  white-space: nowrap;
+  width: 230px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-image img:hover {
+  transform: scale(1.3);
+  transition: .2s;
+}
+
+.product-price {
+  font-size: 16px;
+  color: red;
+  text-align: left;
+  margin-left: 33px;
+}
+
+.mr-tb-20 {
+  margin: 12px 0;
+}
+/*product/create*/
+.form-create {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.title.text-center {
+  font-size: 24px;
+  color: #FC8316;
+  margin: 10px 0;
+}
+
+input[type="text"] {
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid #cecece;
+  outline: none;
+}
+
+label[class] {
+  padding: 5px 15px;
+}
+
+input[name="size"] + label[for],
+input[name="color"] + label[for]{
+  margin-right: 15px;
+}
+
+.noti-error {
+  margin-top: 20px;
+  background: #ebfaec;
+  border: 1px solid red;
+  height: 40px;
+  border-radius: 5px;
+}
+.noti-error p {
+  line-height: 35px;
+  margin: 0 20px;
+  color: red;
+}
+
+.back {
+  margin-top: 20px;
+}
+
+/*products/detail*/
+#pro-inf {
+  font-size: 16px;
+  width: 100%;
+}
+
+#pro-inf tr td{
+  padding: 5px 20px;
+}
+
+td[class*='label'] {
+  font-weight: bold;
+}
+
+
+.img img.img-rounded {
+  width: 150px;
+}
+
+
