--- a/backend/assets/css/style.css
+++ b/backend/assets/css/style.css
@@ -300,14 +300,10 @@ input[name="color"] + label[for]{
   margin-top: 20px;
   background: #ebfaec;
   border: 1px solid red;
-  height: 40px;
   border-radius: 5px;
   padding: 8px;
-}
-.noti-error p {
-  line-height: 35px;
-  margin: 0 20px;
   color: red;
+  font-style: italic;
 }
 
 .back {
